--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -94,11 +94,11 @@
 .header-list-choice {
   display: flex;
   list-style: none;
-  gap: 15px;
+  gap: 30px;
   font-size: 15px;
   font-weight: 700;
   /* padding-top: 12px; */
-  padding: 12px 10px 0px 80px;
+  padding: 12px 10px 0px 200px;
 }
 
 .header-list-choice li {
@@ -169,6 +169,7 @@
   border-radius: 999px;
   width: 52%;
 }
+
 .header-search .search-icon {
   margin-right: 8px;
   font-size: 16px;
@@ -196,4 +197,28 @@
 .icon {
   font-size: 20px;
   cursor: pointer;
+}
+
+.header-third {
+  display: flex;
+  background-color: #f5f5f5;
+  height: 50px;
+  justify-content: center;
+}
+
+.header-third {}
+
+.text-header-third {
+  font-size: 15px;
+  font-weight: 600;
+  color: #333;
+  display: block;
+  padding: 3px 5px;
+}
+
+.center-text {
+  text-align: center;
+  font-size: 13px;
+  text-decoration: underline;
+  font-weight: 900;
 }
